Fix navlinks and get in touch button not being properly aligned by adding padding-top to navlinks, update README file on this fixed bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,9 +77,16 @@ header {
 nav li {
     margin-bottom: 2px;
     margin-top: 2px;
+    /*Pushes navbar links down*/
+    padding-top: 5px;
 }
 
-nav li a {
+/*Overrides abovementioned padding-top to make sure navbar links and get in touch button are aligned*/
+nav li:last-child {
+    padding-top: 0;
+}
+
+nav li>a {
     color: white;
     font-family: var(--secondary-font);
     font-size: 1.2rem;
